--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "search-debounce-react",
   "version": "1.0.0",
   "description": "This is a search input for react with debouncing.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "build": "npx rollup -c"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,16 @@
   "bugs": {
     "url": "https://github.com/erthakurdixit/search-debounce-react/issues"
   },
-  "homepage": "https://github.com/erthakurdixit/search-debounce-react#readme"
+  "homepage": "https://github.com/erthakurdixit/search-debounce-react#readme",
+  "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/react": "^18.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rollup": "^4.19.0",
+    "tslib": "^2.6.3",
+    "lodash.debounce": "^4.0.8"
+  }
 }
