--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "search-debounce-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is a search input for react with debouncing.",
   "main": "dist/index.js",
   "type": "module",
@@ -27,13 +27,15 @@
   "homepage": "https://github.com/erthakurdixit/search-debounce-react#readme",
   "devDependencies": {
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.19.0",
-    "tslib": "^2.6.3",
-    "lodash.debounce": "^4.0.8"
+    "tslib": "^2.6.3"
   }
 }
